# Nxtrive-v1.0.0

./: .gitignore  PRODUCT.md  README.md  RELEASE.md  components.json  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts
.github/workflows/: a11y.yml  build.yml  quality.yml
backend/: build_backend.spec  chunker.py  config.py  errors.py  ingestor.py  main.py  models.py  ollama_checker.py  privacy.py  process_registry.py  requirements.txt  retriever.py  security.py
backend/tests/: test_security.py
scripts/: build-backend.ps1  build-backend.sh  generate-icons.py  patch-linuxdeploy.sh  test-ollama-install-urls.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/sidecar/: .gitkeep
src-tauri/src/: main.rs  process_lifecycle.rs
src/components/: AppBreadcrumb.tsx  AppShellFallback.tsx  BrandLogo.tsx  ChatEmptyHero.tsx  ChatExampleSuggestions.tsx  ChatMarkdown.tsx  ChatPanel.tsx  ChatSourcesDrawer.tsx  CollectionSourcesList.tsx  DesktopOnlyGuard.tsx  DotMapBackground.tsx  DropOverlay.tsx  EmptyChatState.tsx  FolderAccessDialog.tsx  IngestionCompleteModal.tsx  IngestionStatus.tsx  KeyboardShortcutsModal.tsx  MessageBubble.tsx  OllamaInstallDialog.tsx  OllamaSetupGate.tsx  OnboardingLoadingShell.tsx  OnboardingWizard.tsx  SettingsPanel.tsx  SetupFirstRunNotice.tsx  SetupPrerequisites.tsx  Sidebar.tsx  SourcePreviewModal.tsx  StatusBar.tsx  StreamingMessageContent.tsx  SystemVerifyOverlay.tsx  ToastContainer.tsx  WelcomeScreen.tsx
(+106 files in other folders)
